--- a/views/home_manager.hbs
+++ b/views/home_manager.hbs
@@ -110,7 +110,7 @@
             <a href="/manager_to_supervisor">
               <h2 class="post-title">舍監基本資料</h2>
               <h5 class="post-subtitle">
-                管理人員可以在此新增新舍監 刪除舍監 查詢舍監 修改舍監基本資料
+                管理人員可以在此查詢、新增、刪除、修改舍監基本資料
               </h5>
             </a>
           </div>
@@ -120,7 +120,7 @@
             <a href="/manager_to_student">
               <h2 class="post-title">學生基本資料</h2>
               <h5 class="post-subtitle">
-                管理人員可以在此 刪除學生 查詢學生 修改學生基本資料
+                管理人員可以在此查詢、刪除、修改學生基本資料
               </h5>
             </a>
           </div>
@@ -129,9 +129,9 @@
           <!-- Post preview-->
           <div class="post-preview">
             <a href="/manager_to_apply">
-              <h2 class="post-title">申請住宿資料</h2>
+              <h2 class="post-title">住宿申請資料</h2>
               <h5 class="post-subtitle">
-                管理人員可以在此查詢並審核尚未審核之住宿、退宿、換宿申請
+                管理人員可以在此查詢並審核住宿、退宿、換宿申請
               </h5>
             </a>
           </div>
@@ -142,7 +142,7 @@
             <a href="/manager_to_dormitory">
               <h2 class="post-title">大樓宿舍資料</h2>
               <h5 class="post-subtitle">
-                管理人員可以在此查詢所有房間或公共空間之設備種類、數量及狀況，<br>並提供報修功能可更新目前設備狀況
+                管理人員可以在此查詢、新增、刪除、修改所有房間或公共空間之設備種類、數量及狀況，並更新目前設備狀況與維修結案
               </h5>
             </a>
           </div>
@@ -151,7 +151,7 @@
           <!-- Pager-->
           <div class="d-flex justify-content-end mb-4">
             <a class="btn btn-primary text-uppercase" href="/manager_to_message"
-              >公告處 →</a>
+              >公告 →</a>
           </div>
         </div>
       </div>
