--- a/views/home_student.hbs
+++ b/views/home_student.hbs
@@ -138,8 +138,8 @@
           <!-- Post preview-->
           <div class="post-preview">
             <a href="/student_to_apply">
-              <h2 class="post-title">申請住宿資料</h2>
-              <h5 class="post-subtitle">學生可以在此申請住宿資料，並可瀏覽目前申請狀況及自動分發後的房間</h5>
+              <h2 class="post-title">住宿申請資料</h2>
+              <h5 class="post-subtitle">學生可以在此提出住宿、換宿、退宿申請，並可瀏覽目前申請狀況及自動分發後的房間</h5>
             </a>
           </div>
           <!-- Divider-->
