--- a/views/home_supervisor.hbs
+++ b/views/home_supervisor.hbs
@@ -104,7 +104,7 @@
             <a href="supervisor"
               ><h2 class="post-title">舍監基本資料</h2>
               <h5 class="post-subtitle">
-                舍監可以在此查看基本資料，並提供更新資料之功能
+                舍監可以在此查看基本資料，並可更新自身聯絡方式
               </h5></a>
           </div>
             <hr class="my-4" />
@@ -134,7 +134,7 @@
             <a href="supervisor_to_dormitory">
               <h2 class="post-title">大樓宿舍資料</h2>
               <h5 class="post-subtitle">
-                舍監可以在此查詢學生住宿資訊以及所有房間或公共空間之設備種類、數量及狀況，並提供報修功能可更新目前設備狀況
+                舍監可以查詢學生住宿資訊和所有房間之設備種類、數量及狀況，並提供報修功能
               </h5>
             </a>
           </div>
@@ -145,7 +145,7 @@
             <a href="supervisor_to_violation">
               <h2 class="post-title">學生違規紀錄</h2>
               <h5 class="post-subtitle">
-                舍監可以查詢、新增學生違規紀錄並提供修改及刪除違規內容及懲處之功能
+                舍監可以查詢、新增、刪除、修改學生違規紀錄
               </h5>
             </a>
           </div> 
