--- a/views/manager_to_dormitory.hbs
+++ b/views/manager_to_dormitory.hbs
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>宿舍大樓資料</title>
+    <title>大樓宿舍資料</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
@@ -42,15 +42,15 @@
               </a>
             </li>
              <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:14px"
               href="/manager_equipment">房間設備資訊</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:14px"
               href="/manager_studentAccommodation">學生住宿資訊</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:13px"
               href="/login">Log out</a>
             </li>
           </ul>
@@ -63,7 +63,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
             <div class="site-heading">
-              <h1>宿舍大樓資料</h1>
+              <h1>大樓宿舍資料</h1>
             </div>
           </div>
         </div>
