--- a/views/studentAccommodation.hbs
+++ b/views/studentAccommodation.hbs
@@ -7,7 +7,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>住宿申請資料</title>
+    <title>個人住宿資料</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
@@ -66,13 +66,13 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+                class="nav-link px-lg-3 py-3 py-lg-4"
                 href="/dormitory_detail"
                 >Introduction</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4"
               href="/login">Log out</a>
             </li>
           </ul>
@@ -102,7 +102,7 @@
                 <td>{{this.S_ID}}</td>
               </tr>
               <tr>
-                <th>學生姓名</th>
+                <th>姓名</th>
                 <td>{{this.S_Name}}</td>
               </tr>
               <tr>
