--- a/views/student_to_apply.hbs
+++ b/views/student_to_apply.hbs
@@ -65,15 +65,15 @@
             </li>
            
               <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size: 14px"
               href="/student_change_dormitory">換宿申請表單</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size: 14px"
               href="/student_checkout_dormitory">退宿申請表單</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:13px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size: 13px"
               href="/login">Log out</a>
             </li>
           </ul>
@@ -103,7 +103,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">申請住宿資料</h5>
+            <h5 class="modal-title" id="exampleModalLabel">住宿申請資料</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
