--- a/views/supervisor_to_dormitory.hbs
+++ b/views/supervisor_to_dormitory.hbs
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>宿舍大樓資料</title>
+    <title>大樓宿舍資料</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
@@ -59,11 +59,11 @@
               </a>
             </li>
              <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4"
               href="/supervisor_equipment">房間設備資訊</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              <a class="nav-link px-lg-3 py-3 py-lg-4"
               href="/supervisor_to_studentAccommodation">學生住宿資訊</a>
             </li>
             <li class="nav-item">
@@ -81,7 +81,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
             <div class="site-heading">
-              <h1>宿舍大樓資料</h1>
+              <h1>大樓宿舍資料</h1>
             </div>
           </div>
         </div>
